# zenphoton

./: .gitmodules  README.md  build.sh  deploy.sh
hqz/: .gitignore  CMakeLists.txt  Makefile  README.md  animator.coffee  cluster-encode.coffee  cluster-start.coffee  cluster-status.coffee  cluster-stop.coffee  example.json  histogramImage.cpp  histogramImage.h  main.cpp  preview-animation.html  queue-runner.coffee  queue-submit.coffee  queue-watcher.coffee  scene.cpp  scene.h  testApp.cpp  testApp.h  wireframe.html  zen2json.coffee
hqz/examples/: animator.coffee  benchmark.coffee  branches.coffee  harmonic.coffee  myroomSS_masonwall.json  myroomSS_woodwall.json  myroom_masonwall.json  myroom_woodwall.json  plot.js  quick.json  sine.coffee
hqz/export/: export_hqz_maya.py  export_hqz_maya25.py
hqz/export/io_export_hqz/: __init__.py  gen_hqz_blen_FREESTYLE.py  gen_hqz_blen_FREESTYLE_270.py
hqz/hqz.xcodeproj/: project.pbxproj
hqz/hqz.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
hqz/include/: ztrace.h
hqz/include/hqz/: path.h  spectrum.h  zcheck.h  zrender.h  ztrace.h
hqz/lib/: CMakeLists.txt
hqz/src/: histogramimage.cpp  histogramimage.h  lodepng.cpp  main.cpp  path.cpp  path.h  prng.h  ray.h  sampler.h  spectrum.cpp  spectrum.h  zcheck.cpp  zcheck.h  zobject.cpp  zobject.h  zquadtree.h  zrender.cpp  zrender.h  ztrace.cpp  ztrace.h
